--- a/com.opti.rental.ui/plugin.xml
+++ b/com.opti.rental.ui/plugin.xml
@@ -47,5 +47,55 @@
             class="com.opti.rental.ui.preferences.RentalPreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            id="com.opti.rental.ui.helloword"
+            name="Hello Word">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="com.opti.rental.ui.handler.HelloWordHandler"
+            commandId="com.opti.rental.ui.helloword">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
+         <menu
+               label="Texte">
+            <command
+                  commandId="com.opti.rental.ui.helloword"
+                  label="Hello word"
+                  style="push">
+            </command>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:org.eclipse.ui.navigator.ProjectExplorer?after=additions">
+         <menu
+               label="Texte">
+            <command
+                  commandId="com.opti.rental.ui.helloword"
+                  label="Hello word"
+                  style="push">
+            </command>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:com.opti.rental.ui.RentalTreeView?after=additions">
+         <command
+               commandId="com.opti.rental.ui.helloword"
+               label="Hello Word"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
 
 </plugin>
